# visionvoice

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  edge-deployment.md
samples/: README.md
src/visionvoice/: __init__.py  capture.py  cli.py  config.py  detection.py  ocr.py  pipeline.py  types.py
src/visionvoice/agent/: __init__.py  assistant.py  tools.py
src/visionvoice/providers/: __init__.py  anthropic_provider.py  base.py  mock_provider.py  offline_provider.py  ollama_provider.py
src/visionvoice/speech/: __init__.py  stt.py  tts.py
src/visionvoice/vision/: __init__.py  scene.py
src/visionvoice/web/: __init__.py  server.py
tests/: conftest.py  test_agent.py  test_offline.py  test_pipeline.py  test_providers.py
